[package]
name = "Rattus"
version = "0.1.0"
authors = ["Corallus-Caninus <ward.joshua92@yahoo.com>"]
edition = "2018"

[profile.release]
lto=true
incremental=true
opt-level=3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Rattus"
path = "src/lib.rs"

[dependencies]
x11 = "2.18.2"
enclose = "1.1.8"
uinput = "0.1.3"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
tensorflow = {version = "0.17.0", features = ["tensorflow_gpu"]}
rand = "0.8.4"
half = "1.7.1"

# TODO: feature = rat_brain
#TODO: this is a dependency for tests only. do a feature tag or something and work on a 
#      build system moreover (feature rat_brain etc).
# plotters = "0.3.1"

#inputbot = { git = "https://github.com/Corallus-Caninus/inputbot.git", branch = "develop" }

[dependencies.inputbot]
path = "../InputBot"
# [dependencies.tensorflow]
# path = "../Tensorflow-Rust/rust"
